# VoiceEnhancer

./: 2025 춘계학술대회 논문 04-11 최종수정_v2.hwpx  README.md  스마트미디어학회 포스터 05-01_rv2.show
VoiceProcessor_Signal_Oboe/: settings.gradle.kts
VoiceProcessor_Signal_Oboe/app/: build.gradle.kts
VoiceProcessor_Signal_Oboe/app/src/androidTest/java/com/example/voiceprocessor_signal_oboe/: ExampleInstrumentedTest.kt
VoiceProcessor_Signal_Oboe/app/src/main/: AndroidManifest.xml
VoiceProcessor_Signal_Oboe/app/src/main/cpp/: AudioConfig.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  SignalGenerator.h  native-lib.cpp
VoiceProcessor_Signal_Oboe/app/src/main/java/com/example/voiceprocessor_signal_oboe/: MainActivity.kt  NativeAudio.kt
VoiceProcessor_Signal_Oboe/app/src/main/res/layout/: activity_main.xml
VoiceProcessor_Signal_Oboe/app/src/main/res/values/: strings.xml  themes.xml
VoiceProcessor_Signal_Oboe/app/src/main/res/values-night/: themes.xml
VoiceProcessor_Signal_Oboe/app/src/test/java/com/example/voiceprocessor_signal_oboe/: ExampleUnitTest.kt
VoiceProcessor_Signal_Oboe/gradle/wrapper/: gradle-wrapper.properties
